# VRM-Rust-Workflow

./: .gitignore  Cargo.toml  README.md  documentation.md  rustfmt.toml
.github/workflows/: generate-mermaid.yml
diagrams/: architecture.mmd  reservation_life_cycle.mmd
src/: error.rs  lib.rs  logger.rs  main.rs  reservation.rs  traits.rs
src/ai_examples/code_review/: example_conversation_result_01.txt  example_conversation_result_02.txt
src/ai_examples/comment_refinement/: example_conversation_result_01.txt  example_conversation_result_03.txt
src/ai_examples/divergence_analysis/: example_conversation_result_01.txt  example_conversation_result_03.txt
src/ai_examples/prompts/: code_review.md  comment_refinement.md  divergence_analysis.md  thesis_refinement.md
src/ai_examples/thesis_refinement/: example_conversation_result_01.txt  example_conversation_result_02.txt  example_conversation_result_03.txt
src/api/: client_dto.rs  dependency_dto.rs  mod.rs  reservation_dto.rs  workflow_dto.rs
src/api/rms_config_dto/: mod.rs  rms_dto.rs
src/api/vrm_dto/: aci_dto.rs  adc_dto.rs  mod.rs  resource_dto.rs  vrm_dto.rs
src/api/vrm_system_model_dto/: aci_dto.rs  adc_dto.rs  mod.rs  vrm_dto.rs
src/api/workflow_dto/: client_dto.rs  dependency_dto.rs  reservation_dto.rs  workflow_dto.rs
src/data/: exampleReservation.json  reservations.schema.json  vrm.json  vrm_node_simulator.json  vrm_with_slurm.json  workflow_with_direct_mapping.json  workflows.json
src/data/benchmark/: legacy_vrm_example.xml
src/data/demo/: vrm_config.json
src/data/test/: test_workflow_02.json  test_workflow_loading_01.json  test_workflow_with_simple_co_allocation_graph.json
src/domain/: client.rs  co_allocation.rs  dependency.rs  mod.rs  node.rs  reservation.rs  sync_group.rs  workflow.rs  workflow_node.rs  workflow_tests.rs
src/domain/simulator/: mod.rs  simulator.rs  simulator_mock.rs
src/domain/vrm_system_model/: aci.rs  adc.rs  advance_reservation_rms_trait.rs  mod.rs  scheduler_trait.rs  scheduler_type.rs  system.rs  vrm.rs  vrm_manager.rs  vrm_system_model.rs
src/domain/workflow/: client.rs  co_allocation.rs  dependency.rs  mod.rs  reservation.rs  reservations.rs  workflow.rs  workflow_node.rs
src/loader/: parser.rs
src/workflow/: dependency.rs  link_reservation.rs  mod.rs  node.rs  reservation.rs  workflow.rs
statistics/: analytics.csv
tests/: main.rs  simulator_mock.rs  test_aci.rs  test_complex_topologies.rs  test_fragmentation.rs  test_slurm_rest_api.rs  test_slurm_rms_synchronisation.rs  test_topology.rs  test_workflow_CoAllocation.rs  test_workflow_co_allocation_new.rs  test_workflow_loading.rs
tests/common/: mod.rs
tests/domain/: mod.rs  test_vrm_advance_reservation.rs
tests/slurm_rms/: mod.rs  test_slurm_rms.rs  test_slurm_rms_commit.rs
(+177 files in other folders)
