[package]
name = "vrm_rust_workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

log = "0.4.21"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.38"
thiserror = "2.0.17"
union-find = "0.4.3"
rand = "0.9.2"
csv = "1.3"
slotmap = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tokio = { version = "1.49.0", features = ["full"] }
actix = "0.13"
actix-rt = "2.9"
tokio-util = { version = "0.7", features = ["codec", "net"] }
bincode = "1.3"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"