[package]
name = "vrm_rust_workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4"] }
lazy_static = "1.5.0"

log = "0.4.29"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4.44"
thiserror = "2.0.18"
union-find = "0.4.4"
rand = "0.10.1"
csv = "1.4.0"
slotmap = { version = "1.1.1", features = ["serde"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-test = "0.2.6"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time", "local-time"] }
tracing-appender = "0.2.5"
tokio = { version = "1.52.1", features = ["full"] }
actix = "0.13.5"
actix-rt = "2.11.0"
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
bincode = "3.0.0"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
time = { version = "0.3.47", features = ["macros", "local-offset", "formatting"] }
reqwest = { version = "0.13.2", features = ["json"] }
colored = "3.1.1"
anyhow = "1.0.102"
async-trait = "0.1.89"
bimap = "0.6.3"
logtest = "2.0.0"

[profile.release]
lto = true          # Enables Link Time Optimization
codegen-units = 1   # Allows for better optimization at the cost of slower compile time
panic = 'abort'     # Reduces binary size and overhead by removing stack unwinding
strip = true        # Removes symbols to make the binary as small as possible
